--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
 *.beam
 *.ez
-build
+*.iml
+*.o
+*.plt
+*.swo
+*.swp
+*~
+.erlang.cookie
+.eunit
+.idea
+.rebar
+.rebar3
+_*
+_build
+docs
+ebin
 erl_crash.dump
+gen
+log
+logs
+rebar3.crashdump
+/rebar.lock
+build
