--- a/gleam.toml
+++ b/gleam.toml
@@ -1,13 +1,9 @@
 name = "hat_pull"
-version = "0.1.0"
-
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# licences = ["Apache-2.0"]
-# description = "A Gleam library..."
-# repository = { type = "github", user = "username", repo = "project" }
-# links = [{ title = "Website", href = "https://gleam.run" }]
+version = "0.0.1"
+licences = ["MIT"]
+description = "Pull a name out of a hat, automated in Gleam."
+links = { title = 'GitHub', href = 'https://github.com/noamsauerutley/hat-pull' }
+repository = { type = "github", user = "noamsauerutley", repo = "hat-pull" }
 
 [dependencies]
 gleam_stdlib = "~> 0.21"
